--- a/html/main.html
+++ b/html/main.html
@@ -4,15 +4,12 @@
 	<title>Tic Tac Toc</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="../stylesheets/main.css">
-	<!-- <audio src="tic-tac.mp3"controls autoplay loop</audio> -->
-
+	<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/347449103&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 </head>
 <body>
-
 	<div class="container">
 		<h3>Welcome to <span>Tic Tac Toc</span> Game</h3>
 		<div class="playerone">
-			
 			<h2>Player One</h2>
 			<img src="../images/x.jpg" width="100" height="100">
 			<h4>WINNER</h4>
@@ -58,7 +55,7 @@
 		<button class="restart" >Restart Game</button>
 		<button class="again disable" disabled >Play Again</button>
 	</div>
-
+	
 
 	<script src="../script/jquery.min.js"></script>
 	<script src="../script/main.js"></script>
