--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Tic Tac Toc</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="../stylesheets/main.css">
+	<link rel="stylesheet" href="stylesheets/main.css">
 	<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/347449103&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 </head>
 <body>
@@ -11,7 +11,7 @@
 		<h3>Welcome to <span>Tic Tac Toc</span> Game</h3>
 		<div class="playerone">
 			<h2>Player One</h2>
-			<img src="../images/x.jpg" width="100" height="100">
+			<img src="images/x.jpg" width="100" height="100">
 			<h4>WINNER</h4>
 			<span class="score-one">0</span>
 		</div>
@@ -46,7 +46,7 @@
 
 		<div class="playertwo">
 			<h2>Player Two</h2>
-			<img src="../images/o.jpg" width="100" height="100">
+			<img src="images/o.jpg" width="100" height="100">
 			<h4>WINNER</h4>
 			<span class="score-two">0</span>
 		</div>
@@ -57,7 +57,7 @@
 	</div>
 	
 
-	<script src="../script/jquery.min.js"></script>
-	<script src="../script/main.js"></script>
+	<script src="script/jquery.min.js"></script>
+	<script src="script/main.js"></script>
 </body>
 </html>
